--- a/auth-service/templates/admin.html
+++ b/auth-service/templates/admin.html
@@ -53,10 +53,11 @@
                 <a href="/admin/permissions" class="btn primary">Сервисы</a>
             </div>
         </div>
+        <div>
+            <a href="/auth/menu" class="back-link">Назад к меню</a>
+        </div>
     </div>
-    <div class="back-link">
-        <a href="/auth/menu">Назад к меню</a>
-    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script src="/auth/static/js/theme-switcher.js"></script>
     <script src="/auth/static/js/layout-adjust.js"></script>
