--- a/auth-service/templates/permissions.html
+++ b/auth-service/templates/permissions.html
@@ -63,8 +63,8 @@
             </table>
         </div>
     </div> 
-    <div class="back-link">
-        <a href="/admin">Назад к панели управления</a>
+    <div >
+        <a href="/admin" class="back-link">Назад к панели управления</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script src="/auth/static/js/theme-switcher.js"></script>
