--- a/auth-service/templates/role_form.html
+++ b/auth-service/templates/role_form.html
@@ -73,7 +73,7 @@
             </button>
         </form>
     </div>
-    <div class="back-link">
+    <div >
         <a href="/admin/roles" class="btn">Назад к списку ролей</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
