--- a/auth-service/templates/user_import.html
+++ b/auth-service/templates/user_import.html
@@ -58,8 +58,8 @@
             </form>
         </div>
         
-        <div class="back-link">
-            <a href="/admin/users">Назад к пользователям</a>
+        <div >
+            <a href="/admin/users" class="back-link">Назад к пользователям</a>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
