--- a/auth-service/templates/permissions_list.html
+++ b/auth-service/templates/permissions_list.html
@@ -66,8 +66,8 @@
             </table>
         </div> <!-- Closed wrapper -->
         
-        <div class="back-link">
-            <a href="/admin">Назад к панели управления</a>
+        <div >
+            <a href="/admin" class="back-link">Назад к панели управления</a>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
