--- a/auth-service/templates/users.html
+++ b/auth-service/templates/users.html
@@ -74,7 +74,7 @@
         </div>
 
     </div>
-        <div class="back-link">
+        <div>
             <a href="/admin" class="btn">Назад к панели администратора</a>
         </div>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
